<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/img_login_d"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_login_d"
        app:layout_constraintStart_toStartOf="@+id/img_login_d"
        app:layout_constraintTop_toBottomOf="@+id/img_login_d" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_design"
        android:ems="13"
        android:fontFamily="@font/unna"
        android:hint="@string/enter_your_name_or_email"
        android:inputType="text"
        android:textAlignment="textStart"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_usernm"
        android:layout_width="92dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/unna"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:fontFamily="@font/unna"
        android:text="@string/passwordd"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_design"
        android:ems="13"
        android:fontFamily="@font/unna"
        android:textAlignment="textStart"
        android:hint="@string/enter_your_password"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_pass_word"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_pass_word"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_word"
        tools:ignore="Autofill,RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/create_account_btn"
        android:fontFamily="@font/unna"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_pass_word"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/et_pass_word"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_word" />


</androidx.constraintlayout.widget.ConstraintLayout>