<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="152dp"
        android:contentDescription="@string/todo_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d_logo" />

    <TextView
        android:id="@+id/tv_cretaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/unna"
        android:text="@string/create_your_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_nm"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cretaccount"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/et_fnm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text_design"
        android:ems="18"
        android:fontFamily="@font/unna"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nm"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text_design"
        android:ems="18"
        android:fontFamily="@font/unna"
        android:hint="@string/abc_gmail_com"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:textColor="@color/gray"
        android:textColorHint="#546E7A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emil"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/tv_emil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fnm" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edit_text_design"
        android:ems="18"
        android:fontFamily="@font/unna"
        android:hint=" &quot;length must be 6 character or more,\n use some special charecter-@#$!&quot;"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/gray"
        android:textColorHint="#546E7A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:text="Confirm Password"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_confirnpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_design"
        android:ems="18"
        android:fontFamily="@font/unna"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/gray"
        android:textColorHint="#546E7A"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="Re-eneter your password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmpass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/create_account_btn"
        android:fontFamily="@font/unna"
        android:paddingLeft="40dp"
        android:paddingTop="10dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirnpass"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_alrdyhvaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="15dp"
        android:text="Already have an account?"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/unna"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:text="Login"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_alrdyhvaccount"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="NotSibling,UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>